# synthstats

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codex-review.yml  docs.yml
configs/: config.yaml  train.yaml
configs/checkpoint/: default.yaml  minimal.yaml  torch_full.yaml
configs/cluster/: oxford_arc.yaml  slurm.yaml
configs/distributed/: gfn_base.yaml
configs/distributed/ray/: default.yaml  multi_node.yaml  single_gpu.yaml
configs/env/: death_process.yaml  dugongs.yaml  eight_schools.yaml  emotion.yaml  hyperbolic_temporal_discount.yaml  irt.yaml  location_finding.yaml  lotka_volterra.yaml  moral_machines.yaml  peregrines.yaml  surgical.yaml  survival_analysis.yaml
configs/hydra/launcher/: arc.yaml
configs/judge/: composite.yaml  hybrid_lm.yaml  likelihood.yaml  llm_critic_glm5.yaml
configs/learner/: subtb_tinker.yaml  subtb_torch.yaml
configs/logging/: stdout.yaml  wandb.yaml
configs/model/: ministral_3b.yaml  mock.yaml  qwen3_0.6b.yaml  qwen3_1.7b.yaml  qwen3_4b.yaml  tinker.yaml
configs/objective/: subtb.yaml  tb_subtb.yaml
configs/policy/: hf_qwen3_0_6b.yaml  hf_qwen3_4b.yaml  mock.yaml  runpod.yaml  tinker.yaml  tinker_skyrl.yaml
configs/runner/: local.yaml  runpod.yaml  skyrl_ray.yaml  tinker.yaml
configs/runtime/: default.yaml
configs/sweep/: subtb_lr_sweep.yaml
configs/task/: boxing.yaml  toy.yaml
configs/trainer/: skyrl_subtb.yaml  skyrl_tb.yaml  subtb.yaml  tb.yaml  tinker.yaml
docs/: README.md
scripts/: test_config.py  train.py  train_distributed.py  train_skyrl.py  train_tinker.py
scripts/arc/: requirements_arc.txt  setup_env.sh  setup_env.slurm  sync_from_arc.sh  sync_to_arc.sh  test.slurm  train_0.6b.slurm  train_4b.slurm  train_smoke.slurm
src/synthstats/: __init__.py
src/synthstats/cli/: __init__.py  train.py
src/synthstats/collectors/: __init__.py  simple_collector.py
src/synthstats/core/: __init__.py  constants.py  executor.py  judge.py  math_utils.py  policy.py  process.py  task.py  types.py
src/synthstats/data/: __init__.py  sft_loader.py
src/synthstats/distributed/: __init__.py  driver_replay_buffer.py  gfn_exp.py  gfn_trainer.py  scoring.py
src/synthstats/envs/: __init__.py  boxing_env.py  builders.py  skyrl_text_env.py
src/synthstats/evaluation/: __init__.py  sft_benchmark.py
src/synthstats/executors/: pymc_sandbox.py
src/synthstats/integrations/: __init__.py  tinker_adapter.py
src/synthstats/integrations/skyrl/: __init__.py  adapters.py  registry.py
src/synthstats/integrations/tinker/: __init__.py  (+3 more)
src/synthstats/judges/: __init__.py  composite.py  formatting.py  likelihood.py  llm_critic.py
src/synthstats/logging/: __init__.py  step_logger.py
src/synthstats/modeling/: __init__.py  hf_policy.py  thought_mask.py
src/synthstats/policies/: __init__.py  hf_policy.py  parsing.py  runpod_policy.py
src/synthstats/runtime/: __init__.py  codecs.py  rollout.py
src/synthstats/tasks/: __init__.py
src/synthstats/train/: __init__.py
src/synthstats/trainers/: __init__.py  skyrl_subtb.py
src/synthstats/training/: __init__.py  checkpointing.py  tb_trainer.py  train_loop.py  trainer.py
tests/: fixtures.py  strategies.py  test_action_subtb.py  test_boxing_env_score_program.py  test_boxing_env_timeout.py  test_boxing_task.py  test_cli_train.py  test_core_protocols.py  test_core_types.py  test_dependency_inversion_train_runners.py  test_env_builders.py  test_gfn_replay_buffer.py  test_gfn_replay_integration.py  test_hf_policy.py  test_integration_generation.py  test_integration_pipeline.py  test_judges.py  test_local_runner_replay_modes.py  test_local_runner_warmstart.py  test_loop_runner.py  test_property_codecs.py  test_property_replay_buffer.py  test_property_subtb_loss.py  test_property_thought_mask.py  test_pymc_executor.py  test_replay_buffer.py  test_runpod_policy.py  test_runtime.py  test_simple_collector_replay.py  test_skyrl_text_env.py  test_step_logger.py  test_subtb.py  test_subtb_endpoint.py  test_subtb_loss.py  test_thought_mask.py  test_tinker_adapter.py  test_train_skyrl_script.py  test_trainer.py  test_trajectory_balance.py
tests/data/: __init__.py  test_sft_loader.py
tests/distributed/: __init__.py  test_driver_replay_buffer.py  test_gfn_exp.py  test_gfn_trainer.py  test_gradient_flow.py  test_integration.py  test_scoring.py
tests/evaluation/: __init__.py  test_sft_benchmark.py
tests/integrations/: test_combined_tb_subtb.py  test_tinker_eos_extraction.py  test_tinker_trainer_annealing.py
tests/training/: __init__.py  test_checkpointing.py  test_schedulers.py  test_subtb_endpoint.py  test_subtb_tinker_learner.py  test_subtb_torch_learner.py  test_torch_full_checkpoint.py
(+60 files in other folders)
