[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthstats"
version = "0.1.0"
description = "GFlowNet-steered probabilistic program synthesis for safer AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Younesse Kaddar", email = "younesse.kaddar@cs.ox.ac.uk"},
    {name = "Sam Staton"},
    {name = "Nikolay Malkin"},
    {name = "Zihuiwen Ye"},
    {name = "Jacek Karwowski"},
]
dependencies = [
    "pymc>=5.20.0",
    "arviz[all]>=0.21.0",
    "scipy>=1.15.0",
    "pandas>=2.2.0",
    "torch>=2.6.0",
    "transformers>=4.48.0",
    "peft>=0.14.0",
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.0",
    "ray>=2.51.1",
    "gymnasium>=1.0.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.19.0",
    "rich>=13.0.0",
    "litellm>=1.75.0",
    "tiktoken>=0.8.0",
    "pydantic>=2.0.0",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "ipykernel>=6.30.0",
]
swe = [
    "docker>=7.0.0",
]
skyrl = [
    "skypilot",
]
large = [
    "megatron-core",
    "deepspeed",
]

[project.scripts]
synthstats = "synthstats.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["synthstats*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow",
    "canary: opt-in integration tests (RUN_CANARY=1)",
    "integration: requires external services",
]
